# ChatAlone2

./: README.md
backend/: .gitignore  Cargo.toml
backend/doc/: api.yaml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240930_000001_create_user_info_table.rs  m20240930_000002_create_room_info_table.rs  m20241006_000001_user_info.rs  m20241006_000002_lone_info.rs  m20241006_000003_lone_role_info.rs  m20241006_000004_room_info.rs  m20241006_000005_room_identity_info.rs  m20241006_000006_assoc_lone_user.rs  m20241006_000007_assoc_room_user.rs
backend/src/: email.rs  id.rs  jwt.rs  main.rs  room.rs  route.rs  server.backup  sql.rs  sql_test.rs  uuid.rs
backend/src/entities/: assoc_lone_user.rs  assoc_room_user.rs  lone_info.rs  lone_role_info.rs  mod.rs  prelude.rs  room_identity_info.rs  room_info.rs  user_info.rs
backend/src/server/: login.rs  mod.rs  public.rs  register.rs  tools.rs  ws.rs
backend/src/server/api/: login.rs  mod.rs  register.rs  room.rs  tools.rs
backend/src/server/websocket/: conn.rs  error.rs  event.rs  mod.rs  ws.rs
backend/src/sql/: lone.rs  lone_user.rs  mod.rs  role.rs  room.rs  user.rs
frontend/: chat.html  email.html  login.html  person.html  popup.js  register.html  verify.html
