[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ---------------------async runtime----------------------
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
# --------------------------------------------------------

serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
time = "0.3.36"
dashmap = "6.0.1"
regex = "1.10.6"
nanoid = "0.4.0"

axum = { version = "0.7.5", features = ["tokio", "ws"] }
axum-extra = { version = "0.9.3", features = ["form", "typed-header", "cookie"] }
tower-http = { version = "0.5.2", features = ["trace"] }
lettre = { version = "0.11.7", features = ["tokio1-native-tls"] }

# -----------crypto------------
rust-crypto = "0.2.36"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"
# -----------------------------

rusqlite = "0.32.1"
