[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ ".", "./migration" ]

[dependencies]
# ---------------------async runtime----------------------
futures = "0.3.31"
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["full"] }
# --------------------------------------------------------

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
chrono = "0.4.39"
dashmap = "6.1.0"
regex = "1.11.1"
nanoid = "0.4.0"

axum = { version = "0.8.1", features = ["tokio", "ws"] }
axum-extra = { version = "0.10.0", features = ["form", "query", "typed-header", "cookie"] }
time = "0.3.37"
tower-http = { version = "0.6.2", features = ["trace"] }
lettre = { version = "0.11.11", features = ["tokio1-native-tls"] }

# -----------crypto------------
rust-crypto = "0.2.36"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"
# -----------------------------

#rusqlite = "0.32.1"
#hyper = "1.4.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.41"
#headers = "0.4.0"


# -------------test--------------
flate2 = "1.0.35"
log = "0.4.25"

migration = { version = "0.1.0", path = "./migration" }
thiserror = "2.0.11"

[dependencies.sea-orm]
version = "1.1.4"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "debug-print"
]


